[gd_scene load_steps=3 format=3 uid="uid://cnioapg55djtk"]

[ext_resource type="Script" path="res://Scripts/book.gd" id="1_dri8e"]
[ext_resource type="Texture2D" uid="uid://b2eto724k8rlv" path="res://Assets/object/book.png" id="2_11ue6"]

[node name="book" type="Node2D"]
script = ExtResource("1_dri8e")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.15, 0.161)
texture = ExtResource("2_11ue6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2(0.15, 0.161)
polygon = PackedVector2Array(-456.5, -788, -456.5, -786.8, -473.8, -784, -479.9, -784, -494.9, -778, -498, -778, -520.1, -766, -522.3, -766, -532.2, -757, -534.4, -757, -556.4, -731, -557.8, -731, -566.8, -711, -568.2, -711, -571.2, -695, -572.5, -695, -572.5, 664.1, -569.5, 695.2, -569.5, 706.4, -566.5, 714.4, -566.5, 720.4, -553.5, 749.3, -553.5, 751.8, -530.5, 775.7, -530.5, 777.4, -515.5, 783.3, -515.5, 784.7, -501.5, 786.7, -501.5, 788, 563.3, 788, 569.3, 782, 571.5, 782, 571.5, 778, 573.3, 778, 570.5, 769.6, 570.5, 767.1, 561.3, 759, 553.5, 759, 553.5, 743, 552.5, 743, 552.5, 596.5, 558.7, 585, 560.3, 585, 562.3, 570, 563.5, 570, 563.5, -743, 562.5, -743, 562.5, -759.5, 557.5, -769.5, 557.5, -771.9, 546.5, -781.9, 546.5, -783.5, 536.5, -786.5, 536.5, -788)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
